make sure that live player items do not shift down when the stream selector is opened

--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -4505,9 +4505,9 @@ category: Components
   cursor: pointer; }
   @media screen and (min-width: 768px) {
     .live-player__stream {
-      position: relative;
+      top: auto;
       display: block;
-      top: auto; } }
+      width: calc(100% - 20px); } }
 
 .live-player__stream li {
   height: auto; }
@@ -4637,6 +4637,7 @@ category: Components
   @media screen and (min-width: 768px) {
     .live-player__container {
       padding: 20px 0 26px;
+      margin-top: 46px;
       overflow: visible;
       border-bottom: none; } }
 
